--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         
        <center><h1><div id="navcontainer" style="width:678px;">
-	<ul> <li><a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic">Sun</a></li><center><h1><font size="50"px>ballet</font></h1></center></ul>
+	<ul><li><a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><font size="50"px>ballet</font></a></li><center><h1></h1></center></ul>
 </div></h1></center>
 
 
