--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         
        <center><h1><div id="navcontainer" style="width:10%;">
-	<ul><li><a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><font size="50"px>ballet</font></a></li></ul></div></h1></center>
+	<ul><li><a href="https://chey-s.github.io/Ballet/"><font size="50"px>ballet</font></a></li></ul></div></h1></center>
 
 
         
