--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<style>
 div {
-    border: 1px solid black;
+    border: 1% solid black;
     background-color: lightblue;
     padding-top: 0%;
     padding-right: 0%;
