--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>  
        <div><center><h1>
-	<ul><li><a href="https://chey-s.github.io/Ballet/"><font size="50">ballet</font></a></li></ul></h1></center></div>
+	<ul><li>
+<a href="https://chey-s.github.io/Ballet/"><font size="50">
+	ballet
+	</font></a></li></ul></h1></center></div>
         
 	<div align="right"><a href="https://chey-s.github.io/Ballet/">Ballet</a></div>
 </body>
