--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
  <title>Ballet</title>
 </head>
 <body>  
-       <div><center><h1>
+       <p><b><a href="default.asp" target="_blank">Ballet</a></b></p>
+	
+	<div><center><h1>
 	<ul><li>
 <a href="https://chey-s.github.io/Ballet/"><font size="50">
 	ballet
