--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Ballet</title>
 </head>
 <body>  
-       <p><b><a href="default.asp" target="_blank">Ballet</a></b></p>
+	<div height=3%><p><b><a href="default.asp" target="_blank">Ballet</a></b></p></div>
 	
 	<div><center><h1>
 	<ul><li>
