--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>  
 	<h1><p><b><a href="default.asp" target="_blank">Ballet</a></b></p></h1>
 	
+	<a href="default.asp" target="_blank">This is a link</a>
+	
 	<div><center><h1>
 	<ul><li>
 <a href="https://chey-s.github.io/Ballet/"><font size="50">
