--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Ballet</title>
 </head>
 <body>  
-	<h1><p><font color="red"><p><b><a href="default.asp" target="_blank">Ballet</a></b></p></font></p></h1>
+	<h1><p><font color="black"><p><b><a href="default.asp" target="_blank">Ballet</a></b></p></font></p></h1>
 	
 	<a href="default.asp" target="_blank">This is a link</a>
 	
