--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
  <title>Ballet</title>
 </head>
 <body>  
-	<h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1>
-	
-	<a href="default.asp" target="_blank">This is a link</a>
+	<div align="right"><h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
 	
 	<div><center><h1>
 	<ul><li>
 <a href="https://chey-s.github.io/Ballet/"><font size="50">
 	ballet
 	</font></a></li></ul></h1></center></div>
-        
-	<div align="right"><a href="https://chey-s.github.io/Ballet/">Ballet</a></div>
+       
 </body>
 </html>
