--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Ballet</title>
 </head>
 <body>  
-	<div align="right"><h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
+	<div align="center"><h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
 	
 	<div><center><h1>
 	<ul><li>
