--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <html>
 <head>
-        <link href="Cheyenne.css" rel="stylesheet" type="text/css">
+        <style>
+h1 {
+    font-size: 15%;
+}
+	</style>
+	
+	<link href="Cheyenne.css" rel="stylesheet" type="text/css">
        
  <title>Ballet</title>
 </head>
 <body>  
 	<div align="center"><h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
 	
-	<div><center><h1>
+	<div><center><h2>
 	<ul><li>
 <a href="https://chey-s.github.io/Ballet/"><font size="50">
 	ballet
-	</font></a></li></ul></h1></center></div>
+	</font></a></li></ul></h2></center></div>
        
 </body>
 </html>
