--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@ h1 {
 	
 	<div><center><h2>
 	<ul><li>
-<a href="https://chey-s.github.io/Ballet/"><font size="50">
+		<a href="https://chey-s.github.io/Ballet/"><font size="50"></font></a>
 	ballet
-	</font></a></li></ul></h2></center></div>
+	<li>
+		<a href="https://chey-s.github.io/Ballet/"><font size="50"></font>
+	ballet
+	</a></li></ul></h2></center></div>
        
 </body>
 </html>
