--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@ h1 {
 	
 	<div><center><h2>
 	<ul><li>
-		<a href="https://chey-s.github.io/Ballet/"><font size="50"></font></a>
+		<a href="https://chey-s.github.io/Ballet/"><font size="50">
 	ballet
-	<li>
-		<a href="https://chey-s.github.io/Ballet/"><font size="50"></font>
-	ballet
-	</a></li></ul></h2></center></div>
+	</font></a></li></ul></h2></center></div>
        
 </body>
 </html>
