--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <link href=".css" rel="stylesheet" type="text/css">
+        <link href="google.css" rel="stylesheet" type="text/css">
         <title>Ballet</title>
 </head>
 <body>
