--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1 {
  <title>Ballet</title>
 </head>
 <body>  
-	<div align="center"><h1><p><b><a href="default.asp" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
+	<div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
        
 </body>
 </html>
