--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,12 @@
 <ll><a href="https://orange-object.github.io/Ballet/index9.html">1870</a></ll>
   <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
   <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
- <li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
+ </ul>
+ </div></h1></center>
+		
+	  <center><h1><div id="navcontainer" style="width:100%;">
+	<ul>
+	<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index13.html">1910</a></ll>
   <li><a href="https://orange-object.github.io/Ballet/index14.html">1920</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index15.html">1930</a></ll>
@@ -27,7 +32,12 @@
 <ll><a href="https://orange-object.github.io/Ballet/index19.html">1970</a></ll>
   <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
-<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
+</ul>
+ </div></h1></center>
+		  
+	<center><h1><div id="navcontainer" style="width:100%;">
+	<ul>
+		<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
 		</ul>
  </div></h1></center>
                 
