--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,8 @@
 		  
 	<center><h1><div id="navcontainer" style="width:100%;">
 	<ul>
-		<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
+		<div align=center><div Style="width:18.9%;">
+			<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li></div></div>
 		</ul>
  </div></h1></center>
                 
