--- a/index2.html
+++ b/index2.html
@@ -35,10 +35,10 @@
 </ul>
  </div></h1></center>
 		  
-	<center><h1><div id="navcontainer" style="width:100%;">
+	<center><h1><div id="navcontainer" style="width:15%;">
 	<ul>
-		<div align=center><div Style="width:18.9%;">
-			<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li></div></div>
+		
+		<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
 		</ul>
  </div></h1></center>
                 
