--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
        
         <center><h1><div id="navcontainer" style="width:200%;">
 	<ul>
- <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li></div></h1>
-  <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
+ <h1><div><li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li></div></h1>
+ <h1><div><ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll></div></h1>
   <li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
   <li><a href="https://orange-object.github.io/Ballet/index6.html">1840</a></li>
