--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,15 @@
   <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
  </ul>
  </div></h1></center>
+	
+	<div class="wrapper">
+  <div class="box a">A</div>
+  <div class="box b">B</div>
+  <div class="box c">C</div>
+  <div class="box d">D</div>
+  <div class="box e">E</div>
+  <div class="box f">F</div>
+</div>
 		
 	  <center><h1><div id="navcontainer" style="width:300%;">
 	<ul>
