--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
  </div></h1></center>
 	
 	<div class="wrapper">
-  <div class="box a">A</div>
+  <div class="box a">1800</div>
   <div class="box b">B</div>
   <div class="box c">C</div>
   <div class="box d">D</div>
