--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
   <div class="box d">D</div>
   <div class="box e">E</div>
   <div class="box f">F</div>
+		<div class="box g">G</div>
 </div>
 		
 	  <center><h1><div id="navcontainer" style="width:300%;">
