--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,15 @@
 		<div class="box g">G</div>
 </div>
 		
+	<div class="rapper">
+  <div class="box a">1800</div>
+  <div class="box b">B</div>
+  <div class="box c">C</div>
+  <div class="box d">D</div>
+  <div class="box e">E</div>
+  <div class="box f">F</div>
+		<div class="ox g">G</div>
+</div>
 	  <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
 	<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
