--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
   <div class="box c">C</div>
   <div class="box d">D</div>
   <div class="box e">E</div>
-  <div class="box f">F</div>
+  <div class="ox f">F</div>
 		<div class="ox g">G</div>
 </div>
 	  <center><h1><div id="navcontainer" style="width:71.12%;">
