--- a/index2.html
+++ b/index2.html
@@ -31,11 +31,11 @@
 </div>
 		
 	<div class="rapper">
-  <div class="box a">1800</div>
-  <div class="box b">B</div>
-  <div class="box c">C</div>
-  <div class="box d">D</div>
-  <div class="box e">E</div>
+  <div class="ox a">1800</div>
+  <div class="ox b">B</div>
+  <div class="ox c">C</div>
+  <div class="ox d">D</div>
+  <div class="ox e">E</div>
   <div class="ox f">F</div>
 		<div class="ox g">G</div>
 </div>
