--- a/index2.html
+++ b/index2.html
@@ -31,8 +31,8 @@
 </div>
 		
 	<div class="rapper">
-  <div class="ox a">1800</div>
-  <div class="ox b">B</div>
+  <div class="box a">1800</div>
+  <div class="box b">B</div>
   <div class="ox c">C</div>
   <div class="ox d">D</div>
   <div class="ox e">E</div>
