--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,10 @@
   <div class="box e">E</div>
   <div class="box f">F</div>
 		<div class="box g">G</div>
+		<div class="box f">H</div>
+		<div class="box f">I</div>
+		<div class="box f">J</div>
+		<div class="box f">K</div>
 </div>
 	
 	  <center><h1><div id="navcontainer" style="width:71.12%;">
