--- a/index2.html
+++ b/index2.html
@@ -22,16 +22,15 @@
 	
 	<div class="wrapper">
   <div class="box a">1800</div>
-  <div class="box b">B</div>
-  <div class="box c">C</div>
-  <div class="box d">D</div>
-  <div class="box e">E</div>
-  <div class="box f">F</div>
-		<div class="box g">G</div>
-		<div class="box f">H</div>
-		<div class="box f">I</div>
-		<div class="box f">J</div>
-		<div class="box f">K</div>
+  <div class="box b">1810</div>
+  <div class="box c">1820</div>
+  <div class="box d">1830</div>
+  <div class="box e">1840</div>
+  <div class="box f">1850</div>
+		<div class="box g">1860</div>
+		<div class="box f">1870</div>
+		<div class="box f">1880</div>
+		<div class="box f">1890</div>
 </div>
 	
 	  <center><h1><div id="navcontainer" style="width:71.12%;">
