--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
  </div></h1></center>
 	
 	<div class="wrapper">
-  <div class="box a">1800</div>
+  <divclass="box a"><a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic">1800</div></a>
   <div class="box b">1810</div>
   <div class="box c">1820</div>
   <div class="box d">1830</div>
