--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
  </ul>
  </div></h1></center>
 	
-	<div class="wrapper">
+<center>	<div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
   <div class="box b">1810</div>
   <div class="box c">1820</div>
@@ -31,7 +31,7 @@
 		<div class="box f">1870</div>
 		<div class="box f">1880</div>
 		<div class="box f">1890</div>
-</div>
+</div></center>
 	
 	  <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
