--- a/index2.html
+++ b/index2.html
@@ -47,6 +47,19 @@
   <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
 </ul>
  </div></h1></center>
+	
+	<center>	<div class="wrapper">
+<a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
+  <div class="box b">1910</div>
+  <div class="box c">1920</div>
+  <div class="box d">1930</div>
+  <div class="box e">1940</div>
+  <div class="box f">1950</div>
+		<div class="box g">1960</div>
+		<div class="box f">1970</div>
+		<div class="box f">1980</div>
+		<div class="box f">1990</div>
+</div></center>
 		  
 	<center><h1><div id="navcontainer" style="width:6%;">
 	<ul>
