--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,16 @@
         <title>Ballet</title>
 </head>
 <body>
-       
+       <style>
+div {
+    border: 1px solid black;
+    background-color: clear;
+    padding-top: 0%;
+    padding-right: 0%;
+    padding-bottom: 0%;
+    padding-left: 0%;
+}
+
         <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
  <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
@@ -19,6 +28,7 @@
   <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
  </ul>
  </div></h1></center>
+	       </style>
 	
 <center><h2><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
