--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
 </ul>
  </div></h3></center>
 	
-	<center><h4><div class="wrapper">
+	<h4><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1900</div></a>
   <div class="box b">1910</div>
   <div class="box c">1920</div>
@@ -59,7 +59,7 @@
 		<div class="box f">1970</div>
 		<div class="box f">1980</div>
 		<div class="box f">1990</div>
-		</div></h4></center>
+		</div></h4>
 		  
 	<center><h5><div id="navcontainer" style="width:6%;">
 	<ul>
