--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,9 @@
         <title>Ballet</title>
 </head>
 <body>
-        <h1><div id="navcontainer" style="width:71.12%;">
+        <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
  <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
-	</ul>
- </div></h1>
-	<h1><div id="navcontainer" style="width:71.12%;">
-	<ul>
  <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
   <li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
@@ -21,7 +17,7 @@
   <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
   <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
  </ul>
- </div></h1>
+		</div></h1></center>
 	      
 	
 <center><h2><div class="wrapper">
