--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,12 @@
 	<ul>
  <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
  <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
-  <li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
+   </ul>
+		</div></h1></center>
+		
+	<center><h1><div id="navcontainer" style="width:71.12%;">
+	<ul>
+		<li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
   <li><a href="https://orange-object.github.io/Ballet/index6.html">1840</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index7.html">1850</a></ll>
