--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
         <title>Ballet</title>
 </head>
 <body>
-        <center><h1><div id="navcontainer" style="width:71.12%;">
+        <center><h1><div class="wrapper" style="width:71.12%;">
 	<ul>
  <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
  <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
