--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 		<div class="box f">1890</div>
 	</div></h2></center>
 	
-	  <center><h3><div id="navcontainer" style="width:71.12%;">
+	  <h3><div id="navcontainer" style="width:71.12%;">
 	<ul>
 	<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index13.html">1910</a></ll>
@@ -47,7 +47,7 @@
   <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
 </ul>
- </div></h3></center>
+ </div></h3>
 	
 	<h4><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1900</div></a>
