--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 		</div></h1></center>
 	      
 	
-<center><h2><div class="wrapper">
+<h2><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
   <div class="box b">1810</div>
   <div class="box c">1820</div>
@@ -32,9 +32,9 @@
 		<div class="box f">1870</div>
 		<div class="box f">1880</div>
 		<div class="box f">1890</div>
-	</div></h2></center>
+	</div></h2>
 	
-	  <h3><div id="navcontainer" style="width:71.12%;">
+	 <center> <h3><div id="navcontainer" style="width:71.12%;">
 	<ul>
 	<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index13.html">1910</a></ll>
@@ -47,7 +47,7 @@
   <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
 </ul>
- </div></h3>
+ </div></h3></center>
 	
 	<h4><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1900</div></a>
