--- a/index2.html
+++ b/index2.html
@@ -69,5 +69,20 @@
 		</ul>
  </div></h5></center>
                 
+	<center><h1><div id="navcontainer" style="width:71.12%;">
+	<ul>
+ <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
+ <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
+		
+		<li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index6.html">1840</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index7.html">1850</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index8.html">1860</a></li>
+<ll><a href="https://orange-object.github.io/Ballet/index9.html">1870</a></ll>
+  <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
+  <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
+ </ul>
+		</div></h1></center>
 </body>
 </html>
