--- a/index2.html
+++ b/index2.html
@@ -70,17 +70,17 @@
                 
 	<center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
- <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
- <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
-<li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
-  <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
-  <li><a href="https://orange-object.github.io/Ballet/index6.html">1840</a></li>
-  <ll><a href="https://orange-object.github.io/Ballet/index7.html">1850</a></ll>
-  <li><a href="https://orange-object.github.io/Ballet/index8.html">1860</a></li>
-<ll><a href="https://orange-object.github.io/Ballet/index9.html">1870</a></ll>
-  <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
-  <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
- </ul>
+<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index13.html">1910</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index14.html">1920</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index15.html">1930</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index16.html">1940</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index17.html">1950</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index18.html">1960</a></li>
+<ll><a href="https://orange-object.github.io/Ballet/index19.html">1970</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
+</ul>
 		</div></h1></center>
 </body>
 </html>
