--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,20 @@
  </ul>
 		</div></h1></center>
 	      
+	<center><h1><div id="navcontainer" style="width:71.12%;">
+	<ul>
+<li><a href="https://orange-object.github.io/-Ballet/index3.html">1900</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index13.html">1910</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index14.html">1920</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index15.html">1930</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index16.html">1940</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index17.html">1950</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index18.html">1960</a></li>
+<ll><a href="https://orange-object.github.io/Ballet/index19.html">1970</a></ll>
+  <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
+  <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
+</ul>
+		</div></h1></center>
 	
 <h2><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
