--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
   <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
   <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
  </ul>
-		</div></h1></center>
+		</h1></center>
 	
 	<center><h2><div id="navcontainer" style="width:71.12%;">
 	<ul>
@@ -32,7 +32,7 @@
   <li><a href="https://orange-object.github.io/Ballet/index20.html">1980</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index21.html">1990</a></ll>
 </ul>
-		</div></h2></center>
+			</div></h2></center></div>
 	
 <h2><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
