--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
 		</div></h4>
 	
 
-	<center><h1><div id="navcontainer" style="width:6%;">
+	<center><h1><div id="navcontainer" style="width:6%; text-align: center;">
 	<ul>
 <li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
 		</ul>
