--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 </ul>
 		</div></h1></center>
 	
-<h3><div class="wrapper">
+<center><h3><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1800</div></a>
   <div class="box b">1810</div>
   <div class="box c">1820</div>
@@ -45,7 +45,7 @@
 		<div class="box f">1870</div>
 		<div class="box f">1880</div>
 		<div class="box f">1890</div>
-	</div></h3>
+	</div></h3><center>
 		
 	<h4><div class="wrapper">
 <a href="http://earthsky.org/space/what-would-happen-if-sun-disappeared-infographic"><div class="box a">1900</div></a>
