--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 <body>
         <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
- <li><a href="https://orange-object.github.io/Ballet/index2.html">1800</a></li>
+ <li><a href="https://chey-s.github.io/Ballet/index3.html">1800</a></li>
  <ll><a href="https://orange-object.github.io/Ballet/index3.html">1810</a></ll>
 <li><a href="https://orange-object.github.io/Ballet/index4.html">1820</a></li>
   <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
