--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,13 @@
  <li><a href="https://chey-s.github.io/Ballet/index3.html">1800</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1810</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1820</a></li>
-  <ll><a href="https://orange-object.github.io/Ballet/index5.html">1830</a></ll>
-  <li><a href="https://orange-object.github.io/Ballet/index6.html">1840</a></li>
-  <ll><a href="https://orange-object.github.io/Ballet/index7.html">1850</a></ll>
-  <li><a href="https://orange-object.github.io/Ballet/index8.html">1860</a></li>
-<ll><a href="https://orange-object.github.io/Ballet/index9.html">1870</a></ll>
-  <li><a href="https://orange-object.github.io/-Ballet/index.html">1880</a></li>
-  <ll><a href="https://orange-object.github.io/-Ballet/index2.html">1890</a></ll>	
+  <li><a href="https://chey-s.github.io/Ballet/index3.html">1830</a></li>
+ <ll><a href="https://chey-s.github.io/Ballet/index4.html">1840</a></ll>
+<li><a href="https://chey-s.github.io/Ballet/index5.html">1850</a></li>
+  <<li><a href="https://chey-s.github.io/Ballet/index3.html">1860</a></li>
+ <ll><a href="https://chey-s.github.io/Ballet/index4.html">1870</a></ll>
+<li><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></li>
+ <li><a href="https://chey-s.github.io/Ballet/index3.html">1890</a></li>
  </ul>
 		</div></h1></center>
 	
