--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
   <li><a href="https://chey-s.github.io/Ballet/index3.html">1830</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1840</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1850</a></li>
-  <<li><a href="https://chey-s.github.io/Ballet/index3.html">1860</a></li>
+  <li><a href="https://chey-s.github.io/Ballet/index3.html">1860</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1870</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></li>
 		<li><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></li>
