--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
   <li><a href="https://chey-s.github.io/Ballet/index3.html">1930</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1940</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1950</a></li>
-  <<li><a href="https://chey-s.github.io/Ballet/index3.html">1960</a></li>
+  <li><a href="https://chey-s.github.io/Ballet/index3.html">1960</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1970</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></li>
 		<li><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></li>
