--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,13 @@
  <li><a href="https://chey-s.github.io/Ballet/index3.html">1800</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1810</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1820</a></li>
-  <li><a href="https://chey-s.github.io/Ballet/index3.html">1830</a></li>
- <ll><a href="https://chey-s.github.io/Ballet/index4.html">1840</a></ll>
-<li><a href="https://chey-s.github.io/Ballet/index5.html">1850</a></li>
+  <ll><a href="https://chey-s.github.io/Ballet/index3.html">1830</a></li>
+ <li><a href="https://chey-s.github.io/Ballet/index4.html">1840</a></ll>
+<ll><a href="https://chey-s.github.io/Ballet/index5.html">1850</a></li>
   <li><a href="https://chey-s.github.io/Ballet/index3.html">1860</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1870</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></li>
-		<li><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></li>
+		<ll><a href="https://chey-s.github.io/Ballet/index5.html">1880</a></ll>
  </ul>
 		</div></h1></center>
 	
@@ -24,13 +24,13 @@
  <li><a href="https://chey-s.github.io/Ballet/index3.html">1900</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1910</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1920</a></li>
-  <li><a href="https://chey-s.github.io/Ballet/index3.html">1930</a></li>
- <ll><a href="https://chey-s.github.io/Ballet/index4.html">1940</a></ll>
-<li><a href="https://chey-s.github.io/Ballet/index5.html">1950</a></li>
+  <ll><a href="https://chey-s.github.io/Ballet/index3.html">1930</a></li>
+ <li><a href="https://chey-s.github.io/Ballet/index4.html">1940</a></ll>
+<ll><a href="https://chey-s.github.io/Ballet/index5.html">1950</a></li>
   <li><a href="https://chey-s.github.io/Ballet/index3.html">1960</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1970</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></li>
-		<li><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></li>
+		<ll><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></ll>
 </ul>
 		</div></h1></center>
 	
