--- a/index2.html
+++ b/index2.html
@@ -66,5 +66,8 @@
 <li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
 		</ul>
 		</div></h1></center>
+
+	<div align="left"><a href="https://chey-s.github.io/Ballet/index2.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
+
 </body>
 </html>
