--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
 		</ul>
 		</div></h1></center>
 
-	<div align="left"><a href="https://chey-s.github.io/Ballet/index2.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
+	<div align="left"><a href="https://chey-s.github.io/Ballet/index.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
 
 </body>
 </html>
