--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ h1 {
 </il>
 		</CLS></div>
 
-	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>Ballet</p></div></center>
-	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>Belly Dance</p></div></center>
+	<div><center><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>Ballet</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>Belly Dance</p></div></center></div>
 
 	
 </body>
