--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {
 </il>
 		</CLS></div></div>
 
-	<div><center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%;"><p>Ballet</p></div></center>
+	<div><center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 9%"><p>Ballet</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%;"><p>Belly Dance</p></div></center></div>
 
 	
