--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ h1 {
 </il>
 		</CLS></div></div>
 
-	<div><center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></center></div>
-	<div><center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%;"><p>Belly Dance</p></div></center></div>
+	<center><div><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></center>
+	<center><div><div style="background-color: #00FF00;color:black;padding:20px; width: 15%;"><p>Belly Dance</p></div></div></center>
 
 	
 </body>
