--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ h1 {
 
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></center>
-
-	
+<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></center>
 </body>
 </html>
