--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@ h1 {
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></center>
-</body>
+<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Cha-Cha-Cha</p></div></center>
+<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Tap Dance</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jive</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Line Dance</p></div></center>
+	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>East Coast Swing</p></div></center>
+	
+	</body>
 </html>
