--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ h1 {
 
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></center>
-<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center>
+<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></center>
@@ -31,7 +31,7 @@ h1 {
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jive</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Line Dance</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>East Coast Swing</p></div></center>
-		</div></div>
+		</div>
 	
 	</body>
 </html>
