--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
         <style>
 h1 {
+    text-align: center;
+}
+		
+h2 {
     font-size: 300%;
 }
 	</style>
@@ -20,7 +24,7 @@ h1 {
 		</il>
 		</CLS></div>
 
-	<div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div>
+	<h1><div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></h1>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></center>
 <center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
