--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
         <style>
-h1 {
+div {
     text-align: center;
 }
 		
@@ -24,7 +24,7 @@ h2 {
 		</il>
 		</CLS></div>
 
-	<h1><div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></h1>
+	<div><div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></div>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></center>
 <center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
