--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ h2 {
 		</CLS></div>
 
 	<div1><div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></div1>
-	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></center>
-<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div1>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></center>
 	<center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></center>
