--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@ h2 {
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jive</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Line Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>East Coast Swing</p></div></div1>
-		</div>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Capoeria</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Quickstep</p></div></center></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Charleston</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Break Dance</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Modern Dance</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Contemporary Dance</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Concert Dance</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>House Dance</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Locking</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Electric Boogalo</p></div></div1>	
+		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><pPopping</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Latin Dance</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Hip-Hop Dance</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jazz Dance</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Flamenco</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Bolero</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Vinennese Waltz</p></div></div1>
+	</div>
 	
 	</body>
 </html>
