--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ h2 {
  <title>Ballet</title>
 </head>
 <body>  
-	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1></div>
-       <div1><div align: left><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%;"><p>Belly Dance</p></div></div></div1>
+	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1>
+       <div1><div align: left><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%;"><p>Belly Dance</p></div></div></div1></div>
 	<div id="navcontainer";>
 	<CLS>
  <il>
