--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ h2 {
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>House Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Locking</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Electric Boogalo</p></div></div1>	
-		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><Popping</p></div></div1>
+		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%">Popping</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Latin Dance</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Hip-Hop Dance</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jazz Dance</p></div></div1>
