--- a/index11.html
+++ b/index11.html
@@ -25,7 +25,7 @@
   </ul>
 	</div></h1></div>
 	
-		<div align="left"><a href="https://orange-object.github.io/Ballet/"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
+		<div align="left"><a href="https://chey-s.github.io/Ballet/index2.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
 	
 </body>
 </html>
