--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@ function myFunction() {
 <a href="https://chey-s.github.io/Ballet/index2.html">	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></div1></a>
 	
 	<div class="dropdown">
-<button id="myBtn" class="dropbtn"><div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1</button>
+<button id="myBtn" class="dropbtn"><div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1></button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
 
 >  </div></div>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Cha-Cha-Cha</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Tap Dance</p></div></div1>
