--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function myFunction() {
 <a href="https://chey-s.github.io/Ballet/index2.html">	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></div1></a>
 	
 	<div class="dropdown">
-<button id="myBtn" class="dropbtn"><div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1></button>
+<button id="myBtn" class="dropbtn">Salsa</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#home">Home</a>
     <a href="#about">About</a>
