--- a/index.html
+++ b/index.html
@@ -94,11 +94,9 @@ function myFunction() {
   </div></div>
 		
 		<div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
     <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
   </div>
 </div>
 		
