--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		.dropbtn {
     background-color: #4CAF50;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 50%;
+    font-size: 50%;
     border: none;
     cursor: pointer;
 }
@@ -21,14 +21,14 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 200%;
+    box-shadow: 0% 8% 16% 0% rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12% 16%;
     text-decoration: none;
     display: block;
 }
