--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@ function myFunction() {
 </head>
 <body>  
 	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">Ballet</font></p></a></b></p></h1>
-       <div1><div align: left><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%;"><p>Belly Dance</p></div></div></div1></div>
 	<div id="navcontainer";>
 	<CLS>
  <il>
 	 <center><div><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>an artistic dance form performed to music using precise and highly formalized set steps and gestures. Classical ballet, which originated in Renaissance Italy and established its present form during the 19th century, is characterized by light, graceful, fluid movements and the use of pointe shoes.</p>
-		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%; align: left;"><p>Ballet</p>
+		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%; align: left;"><p>Ballet</p></div1></div>
 		 </il>
-		</CLS></div></div></div></div1></div></center>
+		</CLS></div></div></center>
 
 	<div1><div align: left; text-align: center><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%"><p>Ballet</p></div></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></div1>
