--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ function myFunction() {
 <div class="dropdown">
   <button class="dropbtn">Salsa</button>
   <div class="dropdown-content"></div>
-	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></div1></div>
-<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Cha-Cha-Cha</p></div></div1>
-<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Tap Dance</p></div></div1>
+	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%; align: left;"><p>Samba</p></div></div1></div>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%; align: left;"><p>Cha-Cha-Cha</p></div></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%; align: left;"><p>Tap Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Jive</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Line Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>East Coast Swing</p></div></div1>
