--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ function myFunction() {
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Line Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>East Coast Swing</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Capoeria</p></div></div1>
-<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Quickstep</p></div></center></div1>
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Quickstep</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Charleston</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Break Dance</p></div></div1>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Modern Dance</p></div></div1>
