--- a/index13.html
+++ b/index13.html
@@ -1,7 +1,54 @@
 <html>
 <head>
        <style>
-	       
+	       .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 50%;
+    font-size: 50%;
+    border: none;
+    cursor: pointer;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200%;
+    box-shadow: 0% 8% 16% 0% rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12% 16%;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+		
+		div1 {
+    text-align: center;
+}
+		
+		
+		// Get the button, and when the user clicks on it, execute myFunction
+document.getElementById("myBtn").onclick = function() {myFunction()};
+/* myFunction toggles between adding and removing the show class, which is used to hide and show the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+		
+	</style>
+	
 	<link href=".css" rel="stylesheet" type="text/css">
         <title>Ballet</title>
 </head>
