--- a/index13.html
+++ b/index13.html
@@ -54,7 +54,7 @@ function myFunction() {
 </head>
 <body>
        
-    <center><h1><font size="50"px>1880</font></h1></center>
+    <center><h1><font size="50"px>Styles of Dance</font></h1></center>
 	
 	<div align=left><h1><div id="navcontainer" style="width:11.7%;">
 	<ul>
