--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
 	
 	<center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
- <li><a href="https://chey-s.github.io/-Ballet/">1900</a></li>
- <ll><a href="https://chey-s.github.io/Ballet/index4.html">1910</a></ll>
+ <li><a href="https://chey-s.github.io/-Ballet/index14.html">1900</a></li>
+ <ll><a href="https://chey-s.github.io/-Ballet/index15.html">1910</a></ll>
 <li><a href="https://chey-s.github.io/Ballet/index5.html">1920</a></li>
   <ll><a href="https://chey-s.github.io/Ballet/index3.html">1930</a></ll>
  <li><a href="https://chey-s.github.io/Ballet/index4.html">1940</a></li>
